--- a/cSarpProject/Views/Shared/_Layout.cshtml
+++ b/cSarpProject/Views/Shared/_Layout.cshtml
@@ -26,13 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">cSarpProject</a>
+             <!--   <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">cSarpProject</a> -->
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+						<li><a asp-area="" asp-controller="Student" asp-action="List">Student List</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - cSarpProject</p>
+            <p>&copy; 2017 - cm@bdull@h</p>
         </footer>
     </div>
 
