--- a/cSarpProject/Views/Student/List.cshtml
+++ b/cSarpProject/Views/Student/List.cshtml
@@ -1,2 +1,72 @@
 ﻿<h1>Hello Students!!!</h1>
-<img src="~/images/kotlin.png" alt="Mountain View" style="width:304px;height:228px;">
+<!--<img src="~/images/kotlin.png" alt="Mountain View" style="width:304px;height:228px;"> -->
+
+<!--
+<div style="color:#0000FF">
+    <img src="~/images/kotlin.png" style="width:200px; height:200px;" />
+</div>
+-->
+
+<table border="0" cellspacing="0" cellpadding="0">
+  <tr>
+		<!--
+    <th>Photo</th>
+    <th>Info</th>
+		-->
+		
+  </tr>
+  <tr>
+    <td   ><img src="~/images/kotlin.png" style="width:200px; height:200px;" /></td>
+    <td>Main : 425.555.0100<br> After Hours: 425.555.0199</td>
+			
+  </tr>
+  <tr>
+    <td><img src="~/images/kotlin.png" style="width:200px; height:200px;" /></td>
+    <td>Main : 425.555.0100 <br> After Hours: 425.555.0199</td>
+  </tr>
+</table>
+
+
+
+
+
+
+<!--
+<div style="float:left">
+<img src="~/images/kotlin.png" style="width:200px; height:200px;" />
+</div>
+
+<div style="float:left; padding-left:3px;">
+<section class="contact">
+<p>
+<span class="label" , style="background-color:green">Main:</span>
+<span>425.555.0100</span>
+</p>
+<p>
+<span class="label" , style="background-color:green">After Hours:</span>
+<span>425.555.0199</span>
+</p>
+</section>
+</div>
+
+<br>
+
+
+<div style=" clear:both; float:left">
+<br>
+<img src="~/images/kotlin.png" style="width:200px; height:200px;" />
+</div>
+
+<div style="float:left; padding-left:3px;">
+<section class="contact">
+<p>
+<span class="label" , style="background-color:green">Main:</span>
+<span>425.555.0100</span>
+</p>
+<p>
+<span class="label" , style="background-color:green">After Hours:</span>
+<span>425.555.0199</span>
+</p>
+</section>
+</div>
+-->
