--- a/cSarpProject/Views/Shared/_Layout_admin.cshtml
+++ b/cSarpProject/Views/Shared/_Layout_admin.cshtml
@@ -30,16 +30,16 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="PhotoGallary">Photo Gallary</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Admin" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Admin" asp-action="PhotoGallary">Create ID</a></li>
+                    <li><a asp-area="" asp-controller="Admin" asp-action="About">Update Profile</a></li>
+                    <li><a asp-area="" asp-controller="Admin" asp-action="Index">Notification</a></li>
+                    <li><a asp-area="" asp-controller="Admin" asp-action="PhotoGallary">Log</a></li>
 
-
-						
-                </ul>
-					<ul class="nav navbar-nav navbar-right">
+			</ul>			
+     <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-      <li><a href="Login.html" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="Login.html" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
     </ul>
             </div>
         </div>
