--- a/cSarpProject/Views/Home/Index.cshtml
+++ b/cSarpProject/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
       </div>
 
       <div class="item">
-        <img src="~/images/banner2.svg" alt="Chicago" style="width:100%;">
+        <img src="~/images/banner2.svg" alt="Chicago" >
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago!</p>
