--- a/cSarpProject/Views/Home/About.cshtml
+++ b/cSarpProject/Views/Home/About.cshtml
@@ -1,7 +1,26 @@
-﻿@{
+﻿
+<!--
+@{
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+-->
+@model DatabaseTest.Models.InstitutionDetails
+
+
+<div>
+    <h4>Institution Details</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        
+    </dl>
+</div>
