--- a/cSarpProject/Views/Home/PhotoGallary.cshtml
+++ b/cSarpProject/Views/Home/PhotoGallary.cshtml
@@ -1,1 +1,30 @@
-﻿<h1>Photos</h1>
+﻿@model cSarpProject.Models.InstitutionDetails
+
+
+<div>
+    <h4>Institution Details</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        
+    </dl>
+
+
+	    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        
+    </dl>
+
+
+	
+</div>
