--- a/cSarpProject/Views/Home/About.cshtml
+++ b/cSarpProject/Views/Home/About.cshtml
@@ -8,19 +8,20 @@
 
 <p>Use this area to provide additional information.</p>
 -->
-@model DatabaseTest.Models.InstitutionDetails
+<!--
+@model cSarpProject.Models.InstitutionDetails
 
 
-<div>
-    <h4>Institution Details</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
+    <table> 
+    <tr>
+        <td>
             @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.Id)
+        </td>
         
-    </dl>
-</div>
+    </tr>
+    <table> 
+
+    -->
