--- a/cSarpProject/Views/Home/PhotoGallary.cshtml
+++ b/cSarpProject/Views/Home/PhotoGallary.cshtml
@@ -1,30 +1,25 @@
-﻿@model cSarpProject.Models.InstitutionDetails
-
-
-<div>
-    <h4>Institution Details</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        
-    </dl>
-
-
-	    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        
-    </dl>
-
-
-	
+﻿
+<!--
+@model cSarpProject.Models.StudentList
+<div class="col-sm-12">
+<div class="table-responsive">
+<table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+<thead>
+<tr>
+<th>Id</th>
+<th>Name</th>
+</tr>
+</thead>
+<tbody>
+@foreach (var data in Model.StudentAll)
+{
+<tr title="Click Here to See Details">
+<td class="showDetails pointer" >@data.Id</td>
+<td class="showDetails pointer" >@data.Name</td>
+</tr>
+}
+</tbody>
+</table>
 </div>
+</div>
+-->
