--- a/cSarpProject/Views/Shared/_Layout.cshtml
+++ b/cSarpProject/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="PhotoGallary">Photo Gallary</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+						 <li><a asp-area="" asp-controller="Home" asp-action="StudentsList">StudentsList</a></li>
+
+						<li><a asp-area="" asp-controller="Home" asp-action="AddStudent">AddStudent</a></li>
 
 
 						
