--- a/cSarpProject/Views/Home/About.cshtml
+++ b/cSarpProject/Views/Home/About.cshtml
@@ -1,27 +1,30 @@
 ﻿
-<!--
-@{
-    ViewData["Title"] = "About";
-}
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
-
-<p>Use this area to provide additional information.</p>
--->
-<!--
-@model cSarpProject.Models.InstitutionDetails
+@model cSarpProject.Models.PhotoGallary1
 
 
-    <table> 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.Id)
-        </td>
-        
-    </tr>
-    <table> 
 
-    -->
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Department</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.StudentAll1)
+                {
+                    <tr title="Click Here to See Details">
+                        <td class="showDetails pointer">@data.Id</td>
+                        <td class="showDetails pointer">@data.Name</td>
+                        <td class="showDetails pointer">@data.Department</td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
