--- a/cSarpProject/Views/Shared/_Layout.cshtml
+++ b/cSarpProject/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
 						 <li><a asp-area="" asp-controller="Home" asp-action="StudentsList">StudentsList</a></li>
 
 						<li><a asp-area="" asp-controller="Home" asp-action="AddStudent">AddStudent</a></li>
+						JoinList
+						<li><a asp-area="" asp-controller="Home" asp-action="JoinList">JoinList</a></li>
 
 
 						
