--- a/cSarpProject/Views/Accounce/Salary.cshtml
+++ b/cSarpProject/Views/Accounce/Salary.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
   Layout = "_Layout_accounce";
 }
-﻿
+<!--
 
 <label for="month">Month: </label>
 <input type="text" id="month" name="month" class="monthPicker" />
@@ -13,7 +13,7 @@
 
 
 <div class="container">
-<!--  <h2>Creat New ID</h2>-->
+
   <form class="form-horizontal" action="/action_page.php">
 
 
@@ -64,7 +64,44 @@
 
   </form>
 </div>
+-->
+@model cSarpProject.Models.PhotoGallary113
 
+
+
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Basic</th>
+                    <th>Medical</th>
+                    <th>HouseRent</th>
+                    <th>Education</th>
+                    <th>Bonus</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.StudentAll113)
+                {
+                    <tr title="Click Here to See Details">
+                        <td class="showDetails pointer">@data.sId</td>
+                        <td class="showDetails pointer">@data.Basic</td>
+                        <td class="showDetails pointer">@data.Medical</td>
+                    <td class="showDetails pointer">@data.HouseRent</td>
+                    <td class="showDetails pointer">@data.Education</td>
+                    <td class="showDetails pointer">@data.Bonus</td>
+
+    
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
 
 
