--- a/cSarpProject/Views/Shared/_Layout.cshtml
+++ b/cSarpProject/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 						<li><a asp-area="" asp-controller="Home" asp-action="AddStudent">AddStudent</a></li>
 						JoinList
 						<li><a asp-area="" asp-controller="Home" asp-action="JoinList">JoinList</a></li>
-
+                        <li><a asp-area="" asp-controller="Home" asp-action="Salary">Salary</a></li>
 
 						
                 </ul>
