--- a/cSarpProject/Views/Home/JoinList.cshtml
+++ b/cSarpProject/Views/Home/JoinList.cshtml
@@ -1,43 +1,2 @@
 ﻿
-@model cSarpProject.Models.PhotoGallary12
-
-
-
-<div class="col-sm-12">
-    <div class="table-responsive">
-        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>FirstName</th>
-                    <th>LastName</th>
-					<th>PermanentAddress</th>
-					<th>PresentAddress</th>
-					<th>ContactAddress</th>
-					<th>ContactMail</th>
-					<th>ContactNo</th>
-					<th>Phone</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var data in Model.StudentAll12)
-                {
-                    <tr title="Click Here to See Details">
-                        <td class="showDetails pointer">@data.Id</td>
-                        <td class="showDetails pointer">@data.FirstName</td>
-                        <td class="showDetails pointer">@data.LastName</td>
-					<td class="showDetails pointer">@data.PermanentAddress</td>
-					<td class="showDetails pointer">@data.PresentAddress</td>
-					<td class="showDetails pointer">@data.ContactAddress</td>
-					<td class="showDetails pointer">@data.ContactMail</td>
-					<td class="showDetails pointer">@data.ContactNo</td>
-					<td class="showDetails pointer">@data.Phone</td>
-	
-
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
+<h1>Hello world</h1>
