--- a/cSarpProject/Views/Shared/_Layout.cshtml
+++ b/cSarpProject/Views/Shared/_Layout.cshtml
@@ -33,13 +33,20 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="PhotoGallary">Photo Gallary</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+						<!--
 						 <li><a asp-area="" asp-controller="Home" asp-action="StudentsList">StudentsList</a></li>
 
 						<li><a asp-area="" asp-controller="Home" asp-action="AddStudent">AddStudent</a></li>
 						JoinList
 						<li><a asp-area="" asp-controller="Home" asp-action="JoinList">JoinList</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Salary">Salary</a></li>
-
+                        -->
+						 
+						 <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
+						 <li><a asp-area="" asp-controller="Accounce" asp-action="Index">Accounce</a></li>
+						<li><a asp-area="" asp-controller="Teacher" asp-action="Index">Stuff</a></li>
+						
+						
 						
                 </ul>
 					<ul class="nav navbar-nav navbar-right">
