--- a/cSarpProject/Views/Shared/_Layout_admin.cshtml
+++ b/cSarpProject/Views/Shared/_Layout_admin.cshtml
@@ -32,8 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Admin" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Admin" asp-action="IDCreation">Create ID</a></li>
-                    <li><a asp-area="" asp-controller="Admin" asp-action="UpdateAdBio">Update Profile</a></li>
-                    <li><a asp-area="" asp-controller="Admin" asp-action="Index">Notification</a></li>
+                   <!-- <li><a asp-area="" asp-controller="Admin" asp-action="UpdateAdBio">Update Profile</a></li>-->
+                    <li><a asp-area="" asp-controller="Admin" asp-action="UpdateAdBio">Notification</a></li>
                     <li><a asp-area="" asp-controller="Admin" asp-action="Log">Log</a></li>
 
 			</ul>			
