--- a/cSarpProject/Views/Accounce/Join.cshtml
+++ b/cSarpProject/Views/Accounce/Join.cshtml
@@ -3,103 +3,40 @@
 }
 ﻿
 
+@model cSarpProject.Models.Employee
 
-<div class="container">
-<!--  <h2>Creat New ID</h2>-->
-  <form class="form-horizontal" action="/action_page.php">
-
+<h2>Add Student</h2>
+<form asp-controller="Admin" asp-action="SaveTeacher" class="panel panel-body" method="post">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">ID:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter ID" name="email">
-      </div>
+        <div class="col-sm-6">
+
+            <label>ID</label>
+            <input name="Id" type="text" class="form-control">
+            <label>First name</label>
+            <input name="Id" type="text" class="form-control">
+                        <label>Last name</label>
+            <input name="Id" type="text" class="form-control">
+                        <label>Permanent Address</label>
+            <input name="Id" type="text" class="form-control">
+                        <label>Contact Address</label>
+            <input name="Id" type="text" class="form-control">
+            			
+            <label>Contact Mail</label>
+            <input name="Name" type="text" class="form-control">
+			
+            <label>Contact no</label>
+            <input type="text" name="Program" class="form-control">
+             <label>Phone</label>
+
+            <br/>
+            <div class="col-md-offset-2 col-md-10">
+                <input asp-action="AddEmployee" type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+       
     </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">First Name:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter First Name" name="email">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Last Name:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Last Name" name="email">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Permanent Address:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Permanent Address" name="email">
-      </div>
-    </div>
-
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Contact Address:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Contact Address" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Contact Mail:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Contact Mail" name="email">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Contact no:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Contact no" name="email">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Phone:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Phone No" name="email">
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Present Address:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Present Address" name="email">
-      </div>
-    </div>
-
-
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Phone:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Phone" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
-    </div>
-  </form>
-</div>
+   
+   
+   
+</form>
 
