--- a/cSarpProject/Views/Admin/UpdateAdBio.cshtml
+++ b/cSarpProject/Views/Admin/UpdateAdBio.cshtml
@@ -5,45 +5,37 @@
 
 
 
-<div class="container">
-<!--  <h2>Creat New ID</h2>-->
-  <form class="form-horizontal" action="/action_page.php">
+@model cSarpProject.Models.EClassNoticeA
 
 
 
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Present Address:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Present Address" name="email">
-      </div>
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    
+                    <th>NoticeType</th>
+                    <th>NoticeName</th>
+                    <th>NoticeDate</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.NoticeFA)
+                {
+                    <tr title="Click Here to See Details">
+                     
+                        <td class="showDetails pointer">@data.NoticeType</td>
+                        <td class="showDetails pointer">@data.NoticeName</td>
+                    <td class="showDetails pointer">@data.NoticeDate</td>
+       
+
+    
+
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Contact no:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Contact no" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Contact email:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Contact email" name="email">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Phone:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter Phone" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
-    </div>
-  </form>
 </div>
