--- a/cSarpProject/Views/Home/About.cshtml
+++ b/cSarpProject/Views/Home/About.cshtml
@@ -1,30 +1,2 @@
-﻿
-@model cSarpProject.Models.PhotoGallary1
-
-
-
-<div class="col-sm-12">
-    <div class="table-responsive">
-        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Department</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var data in Model.StudentAll1)
-                {
-                    <tr title="Click Here to See Details">
-                        <td class="showDetails pointer">@data.Id</td>
-                        <td class="showDetails pointer">@data.Name</td>
-                        <td class="showDetails pointer">@data.Department</td>
-
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
+﻿<p>Kuakata Khanabad College is the only higher educational institute of the traditional sea-beach kuakata. It has a long historical background. The institute was founded way back in 2000 by Mr. Al-hajj Md. Zahirul Islam Khan, an eminent devotee to education with his own financial and over all cooperation. This was an inaccessible zone on the south of Bangladesh later on assumed the name KUAKATA, a blissful land of beauty. Kuakata is located 25km away from Kalapara Upazila Sadar under the district of Patuakhali. A zome isolated from Upazila Sadar by three rivers on the north and by the Bay of Bengal to the south was ignored and underdeveloped lagging behind from all aspects such as education, culture and communication. With the perspective of the demand of time when the development of Kuakata was getting its onward march under tourism industry, Kuakata Khanabad College was then established with a view to blooming the latent talents of poor, meritorious learners living in the rural areas were uncared and lagged behind from education. The institute got academic recognition on 20 subjects in Science, Humanities and Business Study groups in 2003 and was brought under MPO in 2004. Kuakata Khanabad College has now achieved the universal recognition and the status of a high standard academic institute in the district of Patuakhali for the unparalleled success in the fields of education, culture and good results. At present, the numbers of learners in this college are 519. Total subjects are 21. The numbers of teachers and staffs are 30. It has not been possible imparting lessons to the learners in a sound atmosphere for the shortage of infrastructural development by the government. Notwithstanding, Kuakata Khanabad College is more illuminated with the glory of its own than all other colleges. This is an institute of pride to the people of Kuakata.
+</p>
