--- a/cSarpProject/Views/Home/Index.cshtml
+++ b/cSarpProject/Views/Home/Index.cshtml
@@ -65,26 +65,26 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <img src="~/images/banner1.svg" alt="Los Angeles" style="width:100%;">
+        <img src="~/images/banner1.jpg" alt="Library 1" style="width:100%;">
         <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
+          <h3>Physics</h3>
+          <p>Do you want to be a scientist!!</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="~/images/banner2.svg" alt="Chicago" >
+        <img src="~/images/banner2.jpg" alt="Library 2" >
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
+          <h3>Math</h3>
+          <p>Do you want to be a mathmatician!!!</p>
         </div>
       </div>
     
       <div class="item">
-        <img src="~/images/banner3.svg" alt="New York" style="width:100%;">
+        <img src="~/images/banner3.jpg" alt="Library 3" style="width:100%;">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
+          <h3>English</h3>
+          <p>English is most powerful language</p>
         </div>
       </div>
   
