--- a/cSarpProject/Views/Shared/_Layout_teacher.cshtml
+++ b/cSarpProject/Views/Shared/_Layout_teacher.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Teacher" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Accounce" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Teacher" asp-action="Salary">Salary</a></li>
                     <li><a asp-area="" asp-controller="Teacher" asp-action="Attendence">Attendence</a></li>
                     <li><a asp-area="" asp-controller="Teacher" asp-action="Leave">Leave</a></li>                      
