--- a/cSarpProject/Views/Teacher/Index.cshtml
+++ b/cSarpProject/Views/Teacher/Index.cshtml
@@ -3,36 +3,45 @@
 }
 ﻿
 
+@model cSarpProject.Models.PhotoGallary123
 
 
-<div class="container">
-  <h2>Profile</h2>
-  <div class="row">
-    <div class="col-md-4" >
-      <div class="thumbnail">
-        <a href="~/images/kotlin.png" target="_blank">
-          <img src="~/images/kotlin.png"  alt="Lights" style="width:100%" class="img-circle" alt="Cinque Terre" width="236" height="304">
-          <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-          </div>
-        </a>
-      </div>
+
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>FirstName</th>
+                    <th>LastName</th>
+                    <th>PermanentAddress</th>
+                    <th>PresentAddress</th>
+                    <th>ContactAddress</th>
+                    <th>ContactMail</th>
+                    <th>ContactNo</th>
+                    <th>Phone</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.StudentAll123)
+                {
+                    <tr title="Click Here to See Details">
+                        <td class="showDetails pointer">@data.Id</td>
+                        <td class="showDetails pointer">@data.FirstName</td>
+                        <td class="showDetails pointer">@data.LastName</td>
+                    <td class="showDetails pointer">@data.PermanentAddress</td>
+                    <td class="showDetails pointer">@data.PresentAddress</td>
+                    <td class="showDetails pointer">@data.ContactAddress</td>
+                    <td class="showDetails pointer">@data.ContactMail</td>
+                    <td class="showDetails pointer">@data.ContactNo</td>
+                    <td class="showDetails pointer">@data.Phone</td>
+    
+
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        
-          <div class="caption">
-            <p>About</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-            <p>Update profile</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
 </div>
