--- a/cSarpProject/Views/Teacher/Leave.cshtml
+++ b/cSarpProject/Views/Teacher/Leave.cshtml
@@ -3,33 +3,37 @@
 }
 ﻿
 
+@model cSarpProject.Models.EClassLeaveT
 
-<div class="container">
-        
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Total</th>
-        <th>Spent</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Casual Leav</td>
-        <td>25</td>
-        <td>10</td>
-      </tr>
-      <tr>
-        <td>Study Leave</td>
-        <td>5y</td>
-        <td>1y</td>
-      </tr>
-      <tr>
-        <td>Medical</td>
-        <td>2m</td>
-        <td>27d</td>
-      </tr>
-    </tbody>
-  </table>
+
+
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Casual Leave</th>
+                    <th>Study Leave</th>
+                    <th>Medical</th>
+
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.LeaveFT)
+                {
+                    <tr title="Click Here to See Details">
+                        <td class="showDetails pointer">@data.Id</td>
+                        <td class="showDetails pointer">@data.CasualLeave</td>
+                        <td class="showDetails pointer">@data.StudyLeave</td>
+                    <td class="showDetails pointer">@data.Medical</td>
+
+    
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
