--- a/cSarpProject/Views/Teacher/Notice.cshtml
+++ b/cSarpProject/Views/Teacher/Notice.cshtml
@@ -3,4 +3,37 @@
 }
 ﻿
 
-<h1>under construction</h1>
+@model cSarpProject.Models.EClassNoticeT
+
+
+
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    
+                    <th>NoticeType</th>
+                    <th>NoticeName</th>
+                    <th>NoticeDate</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.NoticeFT)
+                {
+                    <tr title="Click Here to See Details">
+                     
+                        <td class="showDetails pointer">@data.NoticeType</td>
+                        <td class="showDetails pointer">@data.NoticeName</td>
+                    <td class="showDetails pointer">@data.NoticeDate</td>
+       
+
+    
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
