--- a/cSarpProject/Views/Teacher/Salary.cshtml
+++ b/cSarpProject/Views/Teacher/Salary.cshtml
@@ -3,69 +3,39 @@
 }
 ﻿
 
-<label for="month">Month: </label>
-<input type="text" id="month" name="month" class="monthPicker" />
+@model cSarpProject.Models.EClassSalaryT
 
 
 
+<div class="col-sm-12">
+    <div class="table-responsive">
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Basic</th>
+                    <th>House Rent</th>
+                    <th>Medical</th>
+                    <th>Bonus</th>
 
 
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var data in Model.SalaryFT)
+                {
+                    <tr title="Click Here to See Details">
+                        <td class="showDetails pointer">@data.Id</td>
+                        <td class="showDetails pointer">@data.Basic</td>
+                        <td class="showDetails pointer">@data.HouseRent</td>
+                    <td class="showDetails pointer">@data.Medical</td>
+                    <td class="showDetails pointer">@data.Bonus</td>
 
+    
 
-<div class="container">
-<!--  <h2>Creat New ID</h2>-->
-  <form class="form-horizontal" action="/action_page.php">
-
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Basic:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Basic" name="email">
-      </div>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">House Rent:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="House Rent" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Medical:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Medical" name="email">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Education Fee:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Education Fee" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Bonus:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Bonus" name="email">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Account status:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Account status" name="email">
-      </div>
-    </div>
-
-
-  </form>
 </div>
-
-
-
-
-
